Spec fixes for known issues (#226)
* Spec fixes for known issues

* More fixes

* Force a CI run
