# src/honeyhive/_generated/models/Metric.py
@@ -10,19 +10,21 @@ class Metric(BaseModel):
 
     model_config = {"populate_by_name": True, "validate_assignment": True}
 
+    id: Optional[str] = Field(validation_alias="_id", default=None)
+
     name: str = Field(validation_alias="name")
 
-    criteria: Optional[str] = Field(validation_alias="criteria", default=None)
+    criteria: str = Field(validation_alias="criteria")
 
     code_snippet: Optional[str] = Field(validation_alias="code_snippet", default=None)
 
     prompt: Optional[str] = Field(validation_alias="prompt", default=None)
 
-    task: str = Field(validation_alias="task")
+    task: Optional[str] = Field(validation_alias="task", default=None)
 
     type: str = Field(validation_alias="type")
 
-    description: str = Field(validation_alias="description")
+    description: Optional[str] = Field(validation_alias="description", default=None)
 
     enabled_in_prod: Optional[bool] = Field(
         validation_alias="enabled_in_prod", default=None
@@ -32,15 +34,13 @@ class Metric(BaseModel):
         validation_alias="needs_ground_truth", default=None
     )
 
-    return_type: str = Field(validation_alias="return_type")
+    return_type: Optional[str] = Field(validation_alias="return_type", default=None)
 
     threshold: Optional[Dict[str, Any]] = Field(
         validation_alias="threshold", default=None
     )
 
     pass_when: Optional[bool] = Field(validation_alias="pass_when", default=None)
-
-    id: Optional[str] = Field(validation_alias="_id", default=None)
 
     event_name: Optional[str] = Field(validation_alias="event_name", default=None)
 
@@ -55,3 +55,13 @@ class Metric(BaseModel):
     child_metrics: Optional[List[Dict[str, Any]]] = Field(
         validation_alias="child_metrics", default=None
     )
+
+    sampling_percentage: Optional[float] = Field(
+        validation_alias="sampling_percentage", default=None
+    )
+
+    filters: Optional[Dict[str, Any]] = Field(validation_alias="filters", default=None)
+
+    created_at: Optional[str] = Field(validation_alias="created_at", default=None)
+
+    updated_at: Optional[str] = Field(validation_alias="updated_at", default=None)
